--- a/projects/angular/src/forms/combobox/_combobox.clarity.scss
+++ b/projects/angular/src/forms/combobox/_combobox.clarity.scss
@@ -9,6 +9,7 @@
 @use '../../utils/mixins';
 @use '../styles/mixins.forms' as styles-mixins;
 @use '../styles/variables.forms' as forms-variables;
+@use '../../popover/dropdown/variables.dropdown' as dropdown-variables;
 @use 'variables.combobox' as combobox-variables;
 @use '@cds/core/tokens/tokens.scss';
 @use '../../utils/variables/variables.density' as density;
@@ -211,6 +212,16 @@
 
     .clr-combobox-options-empty-text {
       padding: 0 density.$clr-base-horizontal-offset-l;
+    }
+
+    clr-option-group {
+      .clr-option-group-label {
+        @include menu-mixins.generate-dropdown-header();
+      }
+
+      & > .clr-combobox-option {
+        padding-left: density.$clr-base-horizontal-offset-2xl;
+      }
     }
   }
 
