fix: pr feedback

--- a/projects/angular/src/data/datagrid/_datagrid.clarity.scss
+++ b/projects/angular/src/data/datagrid/_datagrid.clarity.scss
@@ -430,7 +430,8 @@
         position: relative;
         display: block;
         flex: 1 1 100%;
-        overflow: auto;
+        overflow-x: auto;
+        overflow-y: scroll;
         will-change: scroll-position;
         contain: strict;
         transform: translateZ(0);
