CDE-2860 Adjust new tokens based on design requirements.

--- a/projects/angular/src/layout/breadcrumbs/_breadcrumbs.clarity.scss
+++ b/projects/angular/src/layout/breadcrumbs/_breadcrumbs.clarity.scss
@@ -35,6 +35,10 @@
           &:hover {
             color: nav-variables.$clr-link-hover-color;
           }
+
+          &:active {
+            color: nav-variables.$clr-link-active-color;
+          }
         }
       }
 
