fix(links): update interaction tokens  (#1956)
## PR Checklist

Please check if your PR fulfills the following requirements:

- [x] Tests for the changes have been added (for bug fixes / features)
- [ ] Docs have been added / updated (for bug fixes / features)
- [ ] If applicable, have a visual design approval

## PR Type

What kind of change does this PR introduce?

<!-- Please check the one that applies to this PR using "x". -->

- [x] Bugfix
- [ ] Feature
- [ ] Code style update (formatting, local variables)
- [ ] Refactoring (no functional changes, no api changes)
- [ ] Build related changes
- [ ] CI related changes
- [ ] Documentation content changes
- [ ] Other... Please describe:

## What is the current behavior?

<!-- Please describe the current behavior that you are modifying, or
link to a relevant issue. -->

Issue Number: CDE-2860

## What is the new behavior? - Adjust tokens of link actions based on
a11y requirements.

## Does this PR introduce a breaking change?

- [ ] Yes
- [x] No

<!-- If this PR contains a breaking change, please describe the impact
and migration path for existing applications below. -->

## Other information

---------

Co-authored-by: GitHub <noreply@github.com>

--- a/projects/angular/src/layout/nav/_properties.nav.scss
+++ b/projects/angular/src/layout/nav/_properties.nav.scss
@@ -12,7 +12,9 @@
     // Usage: ../utils/_reboot.scss
     // Usage: ./_links.scss
     // Link colors
-    --clr-link-active-color: #{tokens.$cds-alias-typography-link-color};
+    --clr-link-active-color: var(
+      --cds-alias-typography-link-color-active
+    ); //@TODO update to SASS token once core is updated.
     --clr-link-color: #{tokens.$cds-alias-typography-link-color};
     --clr-link-hover-color: #{tokens.$cds-alias-typography-link-color-hover};
     --clr-link-visited-color: #{tokens.$cds-alias-typography-link-color-visited};
