--- a/projects/angular/src/utils/variables/_variables.global.scss
+++ b/projects/angular/src/utils/variables/_variables.global.scss
@@ -271,6 +271,7 @@ $clr-layers: (
   datalist-box: 2,
   datagrid-row: 500,
   datagrid-row-sticky: 500,
+  datagrid-row-skeleton: 501,
   datagrid-header: 501,
   datagrid-header-sticky: 502,
   datagrid-host: 590,
