--- a/projects/angular/src/modal/_modal.clarity.scss
+++ b/projects/angular/src/modal/_modal.clarity.scss
@@ -199,11 +199,11 @@
 
       &:not([cds-text]) {
         //cds-text do not have color, margin
+        font-family: modal-variables.$clr-modal-title-font-family; //TODO remove line and PI tokens in GA 17+
         //TODO remove API tokens overrides in GA 17+
         @include mixins.generate-typography-token(
           'SECTION-20-STD',
           (
-            font-family: modal-variables.$clr-modal-title-font-family,
             font-size: modal-variables.$clr-modal-title-font-size,
             font-weight: modal-variables.$clr-modal-title-font-weight,
             line-height: modal-variables.$clr-modal-title-line-height,
