CDE-2862 Fix outline issue

--- a/projects/angular/src/data/datagrid/_datagrid.clarity.scss
+++ b/projects/angular/src/data/datagrid/_datagrid.clarity.scss
@@ -1382,6 +1382,7 @@
       flex: 1 1 auto;
       color: datagrid-variables.$clr-datagrid-detail-header-title-color;
       overflow-wrap: anywhere;
+      line-height: calc(density.$clr-base-typography-line-height-24 + 2px);
     }
 
     .datagrid-detail-pane-close {
