fix(datagrid): skeleton loading without removing row content (#1960)
## PR Checklist

Please check if your PR fulfills the following requirements:

- [ ] Tests for the changes have been added (for bug fixes / features)
- [ ] Docs have been added / updated (for bug fixes / features)
- [ ] If applicable, have a visual design approval

## PR Type

What kind of change does this PR introduce?

<!-- Please check the one that applies to this PR using "x". -->

- [X] Bugfix
- [ ] Feature
- [ ] Code style update (formatting, local variables)
- [ ] Refactoring (no functional changes, no api changes)
- [ ] Build related changes
- [ ] CI related changes
- [ ] Documentation content changes
- [ ] Other... Please describe:

## What is the current behavior?

Skeleton loading replaces the content of the whole row with one cell.

<!-- Please describe the current behavior that you are modifying, or
link to a relevant issue. -->

Issue Number: N/A

## What is the new behavior?

Adding a skeleton on top of the row while hiding the content only
visually but keeping it in the dom.

## Does this PR introduce a breaking change?

- [ ] Yes
- [X] No

<!-- If this PR contains a breaking change, please describe the impact
and migration path for existing applications below. -->

## Other information

--- a/projects/angular/src/data/datagrid/_datagrid.clarity.scss
+++ b/projects/angular/src/data/datagrid/_datagrid.clarity.scss
@@ -19,6 +19,7 @@
 @use 'variables.datagrid' as datagrid-variables;
 @use '../../utils/variables/variables.density' as density;
 @use '@cds/core/tokens/tokens.scss';
+@use '../../utils/animations/animations.clarity' as animations;
 
 @mixin clr-datagrid-header-bg {
   background-color: tables-variables.$clr-thead-bgcolor;
@@ -216,9 +217,21 @@
     &.datagrid-row-skeleton {
       background-color: unset;
 
-      .datagrid-row-scrollable,
-      .datagrid-row-sticky {
-        display: none;
+      .datagrid-row-master {
+        position: relative;
+        @include animations.skeleton-loading();
+        &:before {
+          position: absolute;
+          top: tables-variables.$clr-table-cell-vertical-padding;
+          left: tables-variables.$clr-table-cell-horizontal-padding;
+          height: calc(100% - (2 * tables-variables.$clr-table-cell-vertical-padding));
+          width: calc(100% - (2 * tables-variables.$clr-table-cell-horizontal-padding));
+          z-index: map.get(variables.$clr-layers, datagrid-row-skeleton);
+        }
+        .datagrid-row-sticky,
+        .datagrid-row-scrollable {
+          opacity: 0;
+        }
       }
     }
 
@@ -988,9 +1001,21 @@
       min-width: datagrid-variables.$clr-datagrid-compact-fixed-column-size;
     }
 
-    .datagrid-row .datagrid-row-detail .datagrid-cell.datagrid-container {
-      font-size: mixins.baselinePx(13);
-      line-height: tokens.$cds-global-space-8;
+    .datagrid-row {
+      .datagrid-row-detail .datagrid-cell.datagrid-container {
+        font-size: mixins.baselinePx(13);
+        line-height: tokens.$cds-global-space-8;
+      }
+      &.datagrid-row-skeleton {
+        .datagrid-row-master {
+          &:before {
+            top: tables-variables.$clr-table-compact-vertical-padding;
+            left: tables-variables.$clr-table-compact-horizontal-padding;
+            height: calc(100% - (2 * tables-variables.$clr-table-compact-vertical-padding));
+            width: calc(100% - (2 * tables-variables.$clr-table-compact-horizontal-padding));
+          }
+        }
+      }
     }
 
     .datagrid-row-replaced .datagrid-row-detail .datagrid-cell {
